--- a/editaveis/projetodesoftware.tex
+++ b/editaveis/projetodesoftware.tex
@@ -62,7 +62,7 @@ A Figura \ref{diagramaControle} acima representa todo o fluxo de processamento d
 O passo a passo está descrito a seguir:
 
 \begin{enumerate}
-	\item O usuário acessa a aplicação SBTM através de um navegador Web:
+	\item O usuário acessa a aplicação SBAM através de um navegador Web:
 		\begin{itemize}
 			\item Caso o usuário corrente não possua cadastro, este deve cadastrar-se;
 			\item Caso contrário, o usuário deverá autentica-se na aplicação.
