--- a/editaveis/projetoeletronico.tex
+++ b/editaveis/projetoeletronico.tex
@@ -2,7 +2,7 @@
 
 \section{Objetivo Específico}
 
-Captar, condicionar e processar os dados obtidos através dos sensores internos e externos de um motor a combustão (FIAT 1.0 MPI), além de transmiti-los de forma precisa e sistematizada de acordo com requisitos não funcionais do SBTM (Software da Bancada de Testes de Motor)
+Captar, condicionar e processar os dados obtidos através dos sensores internos e externos de um motor a combustão (FIAT 1.0 MPI), além de transmiti-los de forma precisa e sistematizada de acordo com requisitos não funcionais do SBAM (Software da Bancada de Análise de Motor)
 
 \section{Requisitos}
 
