--- a/editaveis/projetoestrutural.tex
+++ b/editaveis/projetoestrutural.tex
@@ -95,12 +95,16 @@ A Figura \ref{fig:exaustao} apresenta a disposição externa do sistema de escap
 	
 \section{Sistema de Alimentação}
 
-A alimentação de combustível para o motor será feita com bomba de combustível, por injeção eletrônica. O tanque para armazenamento de combustível deverá ser adaptado para fixação no laboratório e para atender aos requisitos para o cálculo de medição de consumo.
+A alimentação de combustível para o motor será feita com bomba de combustível, por injeção eletrônica. O tanque para armazenamento de combustível foi adaptado para fixação no laboratório e para atender aos requisitos para o cálculo de medição de consumo.
 
-O sistema de alimentação ainda está em fase de desenvolvimento e será finalizado para o Ponto de Controle 3. Ainda será decidido como será feita a medição de consumo. São duas opções: o uso de balança para cálculo através da diferença de massa pelo tempo ou o uso de uma bóia automotiva para cálculo através do nível de combustível dentro do tanque.
+A medição de consumo é realizada a partir da variação mássica de combustível medida por uma célula de carga. A celula de carga foi acoplada ao conteiner, através de uma estrutura de fixação e o tanque é fixo a ela por correntes de aço. A figura \ref{celulaDeCarga} ilustra a célula de carga utilizada. 
 
-O material adotado para o tanque deverá ser leve e de fácil manuseamento para adaptações, a fim de aumentar a precisão da medição de combustível. As adaptações necessárias serão furos para fixação da bomba e fixação do tanque no laboratório.
-
+\begin{figure}[h!]
+	\centering
+	\includegraphics[keepaspectratio=true,scale= 0.07]{figuras/celulaDeCarga.JPG}
+	\caption{Célula de carga.}
+	\label{celulaDeCarga}
+\end{figure}
 
 \vfill
 
