--- a/tcc.tex
+++ b/tcc.tex
@@ -25,6 +25,7 @@
 \input{editaveis/projetodesoftware}
 \input{editaveis/subenergia}
 \input{editaveis/gerenciamentodoprojeto}
+\input{editaveis/integracao}
 
 
 \bookmarksetup{startatroot} 
