--- a/editaveis/integracao.tex
+++ b/editaveis/integracao.tex
@@ -26,7 +26,44 @@ Para realização do módulo de controle o usuário deverá acionar o motor, sel
 	\caption{Tela de acionamento do motor}
 	\label{acionamentoDoMotor}
 \end{figure}
-  
+ 
 
+\section{Integração Estrutural}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[angle=270,keepaspectratio=true,scale= 0.09]{figuras/caixaDeAcoplamentoDosComponentesEletronicos.JPG}
+	\caption{Caixa de acoplamento dos componentes do motor}
+	\label{caixaDeAcoplamento}
+\end{figure}
+
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[angle=270,keepaspectratio=true,scale= 0.09]{figuras/AcoplamentoDeSensoresDeArrefecimento.JPG}
+	\caption{Acoplamento de Sensores de Arrefecimento}
+	\label{acoplamentoDoMotor}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[keepaspectratio=true,scale= 0.09]{figuras/SistemaDeAdimissao.JPG}
+	\caption{Mangueira do sistema de admissão}
+	\label{mangueiraDoSistemaAdmissao}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[keepaspectratio=true,scale= 0.09]{figuras/SensorDeTemperaturaNoSistemaDeAdmissao.JPG}
+	\caption{Sensor de temperatura no sistema de admissão}
+	\label{sensorDoSistemaAdmissao}
+\end{figure}
+
+\begin{figure}[h!]
+	\centering
+	\includegraphics[angle=270,keepaspectratio=true,scale= 0.09]{figuras/SaidaParaSensorDePressaoETermopar.JPG}
+	\caption{Saída para sensor de pressão e temopar}
+	\label{saidaParaSensorDePressao}
+\end{figure}
 
 \subsection{Aquisição}
