--- a/editaveis/projetoestrutural.tex
+++ b/editaveis/projetoestrutural.tex
@@ -72,7 +72,7 @@ Para o sistema de admissão de ar do motor, julgou-se necessário a adição de 
 	\label{fig:caixaestabilizadora}
 \end{figure}
 
-Para fazer a ligação da caixa estabilizadora com o coletor de admissão do motor será utilizada uma mangueira de 2m de comprimento e 50mm de diâmetro interno sem a necessidade de apresentar uma espessura ou material específico uma vez que o ar entra em temperaturas ambientes no motor.
+Para fazer a ligação da caixa estabilizadora com o coletor de admissão do motor foi utilizada uma mangueira de 2m de comprimento e 50mm de diâmetro interno sem a necessidade de apresentar uma espessura ou material específico uma vez que o ar entra em temperaturas ambientes no motor.
 
 \vfill
 
@@ -106,7 +106,7 @@ A medição de consumo é realizada a partir da variação mássica de combustí
 	\label{celulaDeCarga}
 \end{figure}
 
-\vfill
+\pagebreak
 
 \section{Acoplamento ao Dinamômetro}
 
