--- a/fixos/pacotes.tex
+++ b/fixos/pacotes.tex
@@ -16,3 +16,33 @@
 \usepackage{rotating}
 \usepackage{pdflscape}
 \usepackage[table,xcdraw]{xcolor}
+
+\usepackage{listings}
+\usepackage{color}
+
+\definecolor{dkgreen}{rgb}{0,0.6,0}
+\definecolor{gray}{rgb}{0.5,0.5,0.5}
+\definecolor{mauve}{rgb}{0.58,0,0.82}
+
+\lstset{
+	language=Python,                
+	basicstyle=\footnotesize,           
+	numbers=left,                   
+	numberstyle=\tiny\color{gray},  
+	stepnumber=2,                             
+	numbersep=5pt,                  
+	backgroundcolor=\color{white},    
+	showspaces=false,               
+	showstringspaces=false,         
+	showtabs=false,                 
+	frame=single,                   
+	rulecolor=\color{black},        
+	tabsize=2,                      
+	captionpos=b,                   
+	breaklines=true,                
+	breakatwhitespace=false,        
+	title=\lstname,                               
+	keywordstyle=\color{blue},          
+	commentstyle=\color{dkgreen},       
+	stringstyle=\color{mauve},     
+}
