Ajustando capítulo de Gerenciamento

--- a/tcc.tex
+++ b/tcc.tex
@@ -1,6 +1,8 @@
 \input{fixos/pacotes}
 \input{fixos/comandos}
 \usepackage{fixos/customizacoes}
+\usepackage{scalefnt}
+\usepackage{rotating}
 
 \input{editaveis/informacoes}
 \input{fixos/informacoes}
