--- a/editaveis/gerenciamentodoprojeto.tex
+++ b/editaveis/gerenciamentodoprojeto.tex
@@ -2,39 +2,39 @@
 
 \section{Termo de Abertura do Projeto}
 
-
-
 \subsection{Estrutura Analítica do Projeto}
 
-\begin{landscape}
-	\begin{figure}
-		\centering
-		\includegraphics[keepaspectratio=true,scale= 0.8]{figuras/EAP.PNG}
-		\caption{EAP}
-		\label{eap}
-	\end{figure}
-\end{landscape}
+\begin{figure}[!htbp]
+	\centering
+	\includegraphics[scale=0.56, angle = 90]{figuras/EAP.PNG}
+	\caption{EAP}
+	\label{eap}
+\end{figure}
+
+\pagebreak
 
 \subsection{Cronograma}
 
-\begin{figure}[h!]
+\begin{figure}[!htbp]
 	\centering
 	\includegraphics[keepaspectratio=true,scale= 0.8]{figuras/cronograma-PI2-parte1.PNG}
 	\caption{Cronograma - Parte 1}
 	\label{eap}
 \end{figure}
 
-\begin{figure}[h!]
+\begin{figure}[!htbp]
 	\centering
 	\includegraphics[keepaspectratio=true,scale= 0.8]{figuras/cronograma-PI2-parte2.PNG}
 	\caption{Cronograma - Parte 2}
 	\label{eap}
 \end{figure}
 
+\pagebreak
 
 \subsection{Custos}
 
-\begin{table}[h!]
+\begin{table}[!htbp]
+	\scalefont{0.85}
 	\centering
 	\caption{Tabela de custos geral}
 	\label{tabela-custos-geral}
@@ -62,10 +62,11 @@
 	\end{tabular}
 \end{table}
 
+\pagebreak
 
 \subsection{Recursos}
 
-\begin{table}[h!]
+\begin{table}[!htbp]
 \centering
 \caption{Papéis da Equipe}
 \label{papeisDaEquipe}
@@ -89,7 +90,7 @@ Arthur                                & Desenvolvedor (Projeto de Automotiva e E
 \end{tabular}
 \end{table}
 
-\begin{table}[h!]
+\begin{table}[!htbp]
 \centering
 \caption{Atividades e Responsáveis}
 \label{atividadeseResponsaveis}
@@ -121,13 +122,12 @@ Modelagem          & Cronograma                           & Ebenezer            
 \end{tabular}
 \end{table}
 
+\pagebreak
+
 \subsection{Riscos}
 
-\begin{landscape}
-% Please add the following required packages to your document preamble:
-% \usepackage[table,xcdraw]{xcolor}
-% If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
-\begin{table}[]
+\begin{sidewaystable}[!htbp]
+\scalefont{0.8}
 \centering
 \caption{Matriz de Risco}
 \label{matrizDeRisco}
@@ -144,8 +144,9 @@ Média                                         & Os sensores não funcionarem   
 Baixa                                         & \begin{tabular}[c]{@{}l@{}}Um integrante do grupo\\ abandonar o projeto\end{tabular} & \cellcolor[HTML]{34FF34}                                                                              & \cellcolor[HTML]{CD9934}\begin{tabular}[c]{@{}l@{}}O custo do projeto ser\\ superior ao orçamento\end{tabular} & O motor não Ligar                                                                                                     \\ \hline
 Rara                                          &                                                                                      & \cellcolor[HTML]{34FF34}\begin{tabular}[c]{@{}l@{}}Queimar algum componente\\ eletrônico\end{tabular} & \cellcolor[HTML]{CD9934}                                                                                       & \cellcolor[HTML]{CD9934}Explodir o Motor                                                                              \\ \hline
 \end{tabular}
-\end{table}
-\end{landscape}
+\end{sidewaystable}
+
+\pagebreak
 
 \subsubsection{Legenda}
 
