Adding pc3 energia

--- a/editaveis/anexos.tex
+++ b/editaveis/anexos.tex
@@ -334,3 +334,41 @@ Para realização da manutenção do equipamento, deve-se seguir os seguintes pa
 	\item Finalizar o programa.
 
 \end{enumerate}
+
+\chapter{Procedimentos de Segurança no Ambiente do Laboratório}
+
+O laboratório de testes do MCI é uma ambiente de trabalho que possui máquinas, equipamentos e produtos químicos que representam riscos potenciais e, por isso, está sujeito às normas de segurança do trabalho.Há a obrigatoriedade de seguir algumas normas reguladoras (NRs) a fim de cumprir as disposições legais e manter a segurança do local e dos usuários. A seguir, estão citadas as principais NRs relacionadas ao local de análise:
+
+\begin{itemize}
+	\item NR 06 - Equipamentos de Proteção Individual - EPI
+
+	O Equipamento de Proteção Individual (EPI) é todo dispositivo ou produto que deve ser utilizado pelo trabalhador com a função de proteger o indivíduo de riscos que possam vir ameaçar a segurança e saúde no trabalho. A empresa é obrigada a fornecer tais equipamentos aos empregados assim como orientá-los sobre a importância da utilização dos equipamentos. Os tipos de EPIs são para proteção da cabeça, para proteção dos olhos e face, proteção auditiva, proteção respiratória, proteção do tronco, proteção dos membros superiores e inferiores, proteção para o corpo inteiro e proteção contra quedas com diferença de nível.
+
+	\item UC02 - NR 10 - Segurança em Instalações e Serviços em Eletricidade
+
+	Estabelece requisitos e condições mínimas com objetivo de implementar medidas de controle e sistemas preventivos para que se garanta a segurança dos trabalhadores que trabalhem de forma direta ou indireta com instalações elétricas e serviços com eletricidade.  Se aplica a geração, transmissão, distribuição e consumo, incluindo etapas de projeto.
+
+	\item NR 16 - Atividades e Operações Perigosas
+
+	As atividades perigosas descritas pela norma são atividades e operações com explosivos, inflamáveis, radiações ionizantes ou substâncias radioativas, atividades profissionais de segurança pessoal ou patrimonial que estão sujeitas a roubos ou outras espécies de violência física, atividades com energia elétrica e atividades perigosas em motocicleta.
+
+	\item NR 20 - Líquidos Combustíveis e Inflamáveis
+
+	Descreve os procedimentos, riscos e equipamentos para manuseio do combustível. Tais como o armazenamento, utilização de equipamento de proteção individual apropriado, entre outros.
+
+	\item NR 23 - Proteção Contra Incêndios
+
+	Estabelece todas as especificações relacionadas ao risco de incêndio, como a saída de emergência, combate ao fogo, extintores, sistema de alarme, entres outros.
+
+	\item NR 26 - Sinalização de Segurança
+
+	Estabelece a utilização de cores com intuito de indicar e advertir possíveis riscos.
+
+\end{itemize}
+
+
+
+
+
+
+
